[package]
name = "bevy_trebuchet"
version = "0.1.0"
edition = "2021"
authors = ["xenon615 <xenon615@gmail.com>"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies.bevy]
version = "0.15.2"
default-features = false
features = [
    "multi_threaded",
    "bevy_gltf",
    "bevy_pbr",
]

[dev-dependencies.bevy]
version = "0.15.2"
default-features = false
features = [
    "multi_threaded",
    "dynamic_linking",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_winit",
    "png",	
] 

[dependencies]
fastrand = "2.3.0"
avian3d = "0.2.1"

[[example]]
name = "basic"
